--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1407,3 +1407,56 @@ div:hover::-webkit-scrollbar {
     min-height: 155px;
     padding-top: 10px;
 }
+
+.third-party-wrapper {
+    padding: 20px;
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+    -ms-flex: 50%; /* IE10 */
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 4px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+        -ms-flex: 50%;
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
+    }
+}
+
+.third-party-info {
+    padding: 5px;
+    padding-left: 10px;
+    background-color: rgba(236, 234, 234, 0.49);
+    border-bottom: 1px solid rgba(228, 227, 229, 0.21);
+    margin-bottom: -10px;
+}
+
+.third-party-fetching-info {
+    padding: 20px;
+    text-align: center;
+    color: rgb(139, 139, 139);
+}
