--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -537,6 +537,20 @@
         <a class="group-description"><%= count %> records found</a>
     </div>
 </script>
+
+<script type="text/template" id="third-party-template">
+    <a href="https://gbif.org/species/<%= taxon_gbif_id %>/" target="_blank">
+        <div class="third-party-info">
+            From gbif.org
+        </div>
+    </a>
+    <div class="third-party-fetching-info">
+        Fetching...
+    </div>
+   <div class="content row third-party-wrapper">
+   </div>
+</script>
+
 <script type="text/template" id="species-template">
     <div class="content">
         <div class="iucn-status"><span class="name"><%= iucn_status_name %></span><span class="full-name"><%= iucn_status_full_name %></span></div>
