--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -636,3 +636,36 @@
         </table>
     </div>
 </script>
+
+{# Biodiversity legend #}
+<script type="text/template" id="biodiversity-legend">
+    <div class="bio-legend-wrapper">
+        <div class="bio-legend-container">
+            <div class="bio-legend-title">
+                Biodiversity Legend
+            </div>
+            <div class="bio-legend-content">
+                <div class="row">
+                    <div class="col-2 bio-legend-color bio-one-site"></div>
+                    <div class="col-8">1 site</div>
+                </div>
+                <div class="row">
+                    <div class="col-2 bio-legend-color bio-cluster-low"></div>
+                    <div class="col-8">1 - 10</div>
+                </div>
+                <div class="row">
+                    <div class="col-2 bio-legend-color bio-cluster-normal"></div>
+                    <div class="col-8">10 - 100</div>
+                </div>
+                <div class="row">
+                    <div class="col-2 bio-legend-color bio-cluster-high"></div>
+                    <div class="col-8">100 - 500</div>
+                </div>
+                <div class="row">
+                    <div class="col-2 bio-legend-color bio-cluster-max"></div>
+                    <div class="col-8">500 up</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
