--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -59,7 +59,6 @@
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/libs/chart/Chart-2.7.2.js" %}"></script>
-    <script src="{% static "js/views/donut-chart.js" %}"></script>
-    <script src="{% static "js/views/generate-donut-chart.js" %}"></script>
+    <script src="{% static "js/landing-page.js" %}"></script>
 
 {% endblock %}
