--- a/bims/static/css/navbar.css
+++ b/bims/static/css/navbar.css
@@ -1,31 +1,28 @@
-
 .dropdown-menu {
-    position: fixed !important;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    padding-top: 70px;
-    padding-left: 50px;
+    margin-top: -7px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.dropdown-menu-left {
+    margin-left: 13px;
+}
+
+.dropdown a:active {
+    background-color: white !important;
+}
+
+.dropdown-menu a:active {
+    background-color: #1b900d !important;
+    color: #fff;
+}
+
+.dropdown-item {
+    padding-bottom: 8px;
+    padding-top: 8px;
+    font-size: 15px;
+    color: rgb(76, 76, 76);
     padding-right: 50px;
-    border-radius: 0 !important;
-    margin-top: 0 !important;
-}
-
-.dropdown-menu li:hover {
-    background-color: rgba(255, 255, 255, 0.6) !important;
-}
-
-.dropdown-menu li {
-    margin-top: 12px;
-}
-
-.dropdown-menu a {
-    color: white !important;
-    font-size: 20pt;
-    font-weight: lighter;
-    font-family: "Roboto Condensed";
 }
 
 .close-dropdown {
@@ -47,12 +44,11 @@
 
 .right-nav-dropdown {
     text-align: right;
+    margin-right: 11px;
 }
 
-.right-nav-dropdown .close-dropdown {
-    top: 0;
-    left: auto;
-    right: 0;
+.right-nav-dropdown .dropdown-item {
+    padding-right: 30px !important;
 }
 
 .bims-title {
@@ -103,16 +99,16 @@
 }
 
 .user-icon {
-    border: 3px solid black !important;
-    border-radius: 0 !important;
-    color: black !important;
+    border: 3px solid rgb(76, 76, 76) !important;
+    padding: 8px 10px;
+    border-radius: 5px;
+    font-weight: lighter;
+    color: rgb(72, 72, 72) !important;
     background-color: white !important;
-    font-size: 25pt !important;
-    padding: 3px 10px;
+    font-size: 18pt !important;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
     width: 55px;
     text-align: center;
-
 }
 
 #navbarResponsive .dropdown-menu {
