--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -31,87 +31,62 @@
 </head>
 <body id="page-top">
 
-    {% block navigation %}
+{% block navigation %}
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target=".navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse navbarResponsive">
-          <ul class="navbar-nav">
-             <li class="dropdown">
-                 <a class="dropdown-toggle" id="menu-dropdown-burger" href="#"><i class="fa fa-reorder user-icon"></i></a>
-                    <ul class="dropdown-menu">
-                        <div class="close-dropdown"><i class="fa fa-close"></i></div>
-                        <div class="bims-title row">
-                            <div class="bims-title-big col-lg-6">BIMS</div>
-                            <div class="bims-title-acc
-                            col-lg-6">BIODIVERSITY <br/>INFORMATION MANAGEMENT SYSTEM</div>
+        <div class="container">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target=".navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="dropdown">
+                        <div class="btn" id="menu-dropdown-burger" data-toggle="dropdown">
+                            <i class="fa fa-reorder user-icon"></i>
                         </div>
-                        <li><a class="nav-link js-scroll-trigger" href="/">HOME</a></li>
-                        <li><a class="nav-link js-scroll-trigger" href="/map">MAP</a></li>
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-ext-resources" href="{% url 'link_list' %}">LINKS</a></li>
-                        <li><a class="nav-link js-scroll-trigger" href="/tracking/">SITE
-                            STATISTICS</a></li>
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-doc-report" href="/documents/">DOCUMENTS & REPORTS</a></li>
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-contact" href="/contact/">CONTACT</a></li>
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a></li>
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-geonode" href="/layers">GIS CATALOGUE</a></li>
-                        <div class="bims-nav-footer row">
-                            <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY <a href="http://kartoza.com/">KARTOZA</a></div>
+                        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="menu-dropdown-burger">
+                            <a class="dropdown-item" href="/">HOME</a>
+                            <a class="dropdown-item" href="/map">MAP</a>
+                            <a class="dropdown-item" id="navbar-ext-resources" href="{% url 'link_list' %}">LINKS</a>
+                            <a class="dropdown-item" href="/tracking/">SITE
+                                STATISTICS</a>
+                            <a class="dropdown-item" id="navbar-doc-report" href="/documents/">DOCUMENTS & REPORTS</a>
+                            <a class="dropdown-item" id="navbar-contact" href="/contact/">CONTACT</a>
+                            <a class="dropdown-item" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a>
+                            <a class="dropdown-item" id="navbar-geonode" href="/layers">GIS CATALOGUE</a>
                         </div>
-                    </ul>
-            </li>
-          </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse navbarResponsive" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="dropdown">
+                        <div class="btn" id="menu-dropdown-account" data-toggle="dropdown" href="#">
+                            <i class="fa fa-user user-icon"></i>
+                        </div>
+                        <div class="dropdown-menu right-nav-dropdown" aria-labelledby="menu-dropdown-account">
+                            {% if user.is_authenticated %}
+                                <a class="dropdown-item" id="navbar-profile" href="/profile/">PROFILE</a>
+                                <a class="dropdown-item" id="navbar-upload" href="{% block upload_data_url %}/upload/{% endblock %}">UPLOAD DATA</a>
+                                {% if user.is_staff or user.is_superuser %}
+                                    <a class="dropdown-item" href="/admin/">ADMINISTRATION</a>
+                                {% endif %}
+                                <a class="dropdown-item" id="navbar-upload" href="/nonvalidated-list/">VALIDATE RECORDS</a>
+                                <a class="dropdown-item" href="/nonvalidated-user-list/">UPDATE RECORDS</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a>
+                            {% else %}
+                                <a class="dropdown-item" href="/accounts/login/"><i class="fa fa-sign-in"></i> LOGIN</a>
+                                <a class="dropdown-item" href="/accounts/signup/">SIGN UP</a>
+                            {% endif %}
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="collapse navbar-collapse navbarResponsive" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-             <li class="dropdown">
-                 <a class="dropdown-toggle" id="menu-dropdown-account" href="#"><i class="fa fa-user user-icon"></i></a>
-                    <ul class="dropdown-menu right-nav-dropdown">
-                    <div class="close-dropdown"><i class="fa fa-close"></i></div>
-                    <div class="container">
-                    <div class="bims-title row">
-                        <div class="bims-title-big col-lg-6">BIMS</div>
-                        <div class="bims-title-acc col-lg-6">BIODIVERSITY <br/>INFORMATION MANAGEMENT SYSTEM</div>
-                    </div>
-                    </div>
-                     {% if user.is_authenticated %}
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-profile" href="/profile/">PROFILE</a></li>
-                         <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="{% block upload_data_url %}/upload/{% endblock %}">UPLOAD DATA</a></li>
-                         {% if user.is_staff or user.is_superuser %}
-                            <li><a class="nav-link js-scroll-trigger" href="/admin/">ADMINISTRATION</a></li>
-                         {% endif %}
-                             <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/nonvalidated-list/">VALIDATE RECORDS</a></li>
-                             <li><a class="nav-link js-scroll-trigger" href="/nonvalidated-user-list/">UPDATE RECORDS</a></li>
-                             <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a></li>
-                     {% else %}
-                        <li><a class="nav-link js-scroll-trigger" href="/accounts/login/"><i class="fa fa-sign-in"></i> LOGIN</a></li>
-                        <li><a class="nav-link js-scroll-trigger" href="/accounts/signup/">SIGN UP</a></li>
-                     {% endif %}
-                    <div class="bims-nav-footer row">
-                        <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY <a href="http://kartoza.com/">KARTOZA</a></div>
-                    </div>
-                    </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
     </nav>
 
     <script>
-
-        var burgerMenuButton = document.getElementById("menu-dropdown-burger");
-        var accountMenuButton = document.getElementById("menu-dropdown-account");
-
-        burgerMenuButton.onclick = function () {
-            burgerMenuButton.nextElementSibling.classList.add("show");
-        };
-
-        accountMenuButton.onclick = function () {
-            accountMenuButton.nextElementSibling.classList.add("show");
-        };
 
         var dropdownCloseButtons = document.getElementsByClassName("close-dropdown");
 
@@ -183,13 +158,13 @@
 
     </script>
 
-    {% endblock %}
+{% endblock %}
 
-    {% block body_content %} {% endblock %}
+{% block body_content %} {% endblock %}
 
-    <!-- Bootstrap core JavaScript -->
+<!-- Bootstrap core JavaScript -->
 
-    {% block foot %} {% endblock %}
+{% block foot %} {% endblock %}
 
 </body>
 
