--- a/bims/static/css/landing_page.css
+++ b/bims/static/css/landing_page.css
@@ -36,7 +36,7 @@ section {
 }
 
 #fish-data {
-    padding-top: 20px;
+    padding-top: 30px;
     min-height: 500px;
     padding-bottom: 150px;
 }
@@ -132,6 +132,7 @@ header.masthead p {
     position: absolute;
     width: 100%;
     height: 400px;
+    top: 0;
 }
 
 .title-header-buttons {
@@ -327,7 +328,8 @@ html, body {
 .donut-chart {
     position: absolute !important;
     top: 10px;
-    left: 69px;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .btn-account {
