--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target=".navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                Menu
             </button>
             <div class="collapse navbar-collapse navbarResponsive">
                 <ul class="navbar-nav">
