--- a/bims/templates/contactus/contact.html
+++ b/bims/templates/contactus/contact.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="{% static 'css/account.css' %}">
     <link rel="stylesheet" href="{% static 'css/contactus.css' %}">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+
 {% endblock %}
 
 
