--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -53,7 +53,10 @@
                             <a class="dropdown-item" id="navbar-doc-report" href="/documents/">DOCUMENTS & REPORTS</a>
                             <a class="dropdown-item" id="navbar-contact" href="/contact/">CONTACT</a>
                             <a class="dropdown-item" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a>
-                            <a class="dropdown-item" id="navbar-geonode" href="/layers">GIS CATALOGUE</a>
+                             {% if user.is_authenticated %}
+                                 <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" id="navbar-geonode" href="/layers">GIS CATALOGUE</a>
+                            {% endif %}
                         </div>
                     </li>
                 </ul>
