--- a/bims/static/css/landing_page.css
+++ b/bims/static/css/landing_page.css
@@ -36,7 +36,7 @@ section {
 }
 
 #fish-data {
-    padding-top: 20px;
+    padding-top: 30px;
     min-height: 500px;
     padding-bottom: 150px;
 }
@@ -132,6 +132,7 @@ header.masthead p {
     position: absolute;
     width: 100%;
     height: 400px;
+    top: 0;
 }
 
 .title-header-buttons {
@@ -148,11 +149,13 @@ header.masthead p {
     color: #1b900d;
     border: 2px solid #1b900d;
     text-align: left;
+    border-radius: 4px;
 }
 
 #search-on-map {
     border: none;
     height: 30px;
+    padding-top: 4px;
 }
 
 #search-on-map:focus {
@@ -185,8 +188,8 @@ header.masthead p {
 }
 
 .carousel-indicators li {
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     border-radius: 10px;
     border: 2px solid white;
 }
@@ -325,17 +328,18 @@ html, body {
 .donut-chart {
     position: absolute !important;
     top: 10px;
-    left: 69px;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .btn-account {
     background-color: white;
-    border-radius: 0;
+    border-radius: 4px;
     margin: 10px;
     font-weight: normal;
     color: #1b900d;
-    padding: 3px 20px;
-    font-size: 13pt;
+    padding: 7px 22px;
+    font-size: 11pt;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
     transition: all 0.3s ease 0s;
     border: 2px solid #1b900d;
