Fix navbar menu in csv uploader page

--- a/bims/templates/csv_uploader.html
+++ b/bims/templates/csv_uploader.html
@@ -89,6 +89,7 @@
 
     <!-- Plugin JavaScript -->
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/libs/jquery-fileupload/vendor/jquery.ui.widget.js" %}"></script>
     <script src="{% static "js/libs/jquery-fileupload/jquery.iframe-transport.js" %}"></script>
     <script src="{% static "js/libs/jquery-fileupload/jquery.fileupload.js" %}"></script>
