--- a/bims/templates/non_validated_list.html
+++ b/bims/templates/non_validated_list.html
@@ -12,6 +12,7 @@
 
     <script src="{% static 'js/libs/jquery/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/libs/openlayers-4.6.4/ol.js' %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
 {% endblock %}
 
 {% block body_content %}
