--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -149,7 +149,7 @@ html, body, .map, .map-wrapper, #map-container {
     background-color: white;
     position: absolute;
     left: 0;
-    top: 185px;
+    top: 207px;
     transform: translateY(-50%);
     padding-left: 6px;
     padding-right: 6px;
@@ -168,8 +168,16 @@ html, body, .map, .map-wrapper, #map-container {
     top: 160px;
 }
 
+.layer-switcher.no-upload {
+    top: 230px !important;
+}
+
 .download-control-panel {
-    top: 349px;
+    top: 392px;
+}
+
+.download-control-panel.no-upload {
+    top: 297px !important;
 }
 
 .download-control-panel .download-format-selector-container {
@@ -677,7 +685,7 @@ html, body, .map, .map-wrapper, #map-container {
 
 .layer-switcher {
     position: absolute;
-    top: 280px !important;
+    top: 324px !important;
     left: 0;
     right: auto !important;
     text-align: left;
