--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -165,6 +165,25 @@
     </div>
 </script>
 
+<script type="text/html" id="spatial-filter-panel">
+    <div class="spatial-filter-container map-control-panel-box">
+        <div class="row">
+            <div class="col-lg-12" style="padding-right: 0">
+                    <span class="title">
+                        SPATIAL FILTER
+                    </span>
+                <div class="spatial-filter-container-close close-button pull-right">
+                    X
+                </div>
+            </div>
+        </div>
+        <div class="row content">
+            <ul id="layers-selector" style="width:100%">
+            </ul>
+        </div>
+    </div>
+</script>
+
 <script type="text/html" id="layer-selector-row">
     <li class="ui-state-default">
         <div class="row-title">
@@ -191,6 +210,9 @@
             <i class="fa fa-location-arrow" aria-hidden="true"></i>
         </div>
         {% if user.is_authenticated %}
+            <div class="spatial-filter sub-control-panel">
+                <i class="fa fa-crop" aria-hidden="true"></i>
+            </div>
             <div class="upload-data sub-control-panel">
                 <i class="fa fa-upload" aria-hidden="true"></i>
             </div>
