Backend for upload user boundary shapefile

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -217,6 +217,10 @@
                         </tbody>
                     </table>
 
+                    <div class="help-block process-shapefile">
+                        Processing shapefiles...
+                    </div>
+
                 </div>
             </div>
         </div>
