Show boundary list and add click event

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -178,7 +178,9 @@
             </div>
         </div>
         <div class="row content">
-            <button id="spatial-filter-panel-upload">upload</button>
+            <button id="spatial-filter-panel-upload">Upload New Boundary</button>
+        </div>
+        <div class="boundary-list">
         </div>
     </div>
 
