--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -195,6 +195,10 @@
                     </button>
                 </div>
                 <div class="modal-body">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Boundary Name</label>
+                        <input type="text" class="form-control" id="boundary-input-name" aria-describedby="emailHelp" placeholder="Enter boundary name">
+                    </div>
                     <label for="file"><b>Upload shapefile here</b></label>
                     <button type="button" class="btn btn-primary btn-boundary-upload">
                         <span class="glyphicon glyphicon-cloud-upload"></span> Upload shapefiles
