Select multiple boundary

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -167,7 +167,7 @@
 
 <script type="text/html" id="spatial-filter-panel">
     <div class="spatial-filter-container map-control-panel-box">
-        <div class="row">
+        <div class="row spatial-filter-panel-title">
             <div class="col-lg-12" style="padding-right: 0">
                     <span class="title">
                         SPATIAL FILTER
@@ -180,7 +180,7 @@
         <div class="row content">
             <button id="spatial-filter-panel-upload">Upload New Boundary</button>
         </div>
-        <div class="boundary-list">
+        <div class="row boundary-list">
         </div>
     </div>
 
