--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -182,6 +182,10 @@
         </div>
         <div class="row boundary-list">
         </div>
+        <div class="row boundary-action">
+            <button class="spatial-apply-filter">Apply Filter</button>
+            <button class="spatial-clear-filter">Clear Filter</button>
+        </div>
     </div>
 
     <div class="modal" tabindex="-1" role="dialog">
