--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -75,6 +75,8 @@
                 FILTERS
             </div>
         </div>
+
+        {% if modules_exists %}
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 MODULE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
@@ -85,6 +87,8 @@
             <div class="col-lg-4 not-ready"><img src="/static/img/invertebras-2.svg"></div>
             <div class="col-lg-4 not-ready"><img src="/static/img/algae-2.svg"></div>
         </div>
+        {% endif %}
+
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle" id="date-filter-subtitle">
                 TEMPORAL SCALE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
@@ -131,6 +135,8 @@
                 <button class="clear-filter">Clear Filter</button>
             </div>
         </div>
+
+        {% if use_ecological_condition %}
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 ECOLOGICAL CONDITION <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
@@ -160,6 +166,9 @@
                 </div>
             </div>
         </div>
+        {% endif %}
+
+        {% if use_conservation_status %}
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 CONSERVATION STATUS <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
@@ -172,6 +181,9 @@
                 </select>
             </div>
         </div>
+        {% endif %}
+
+        {% if use_study_reference %}
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 STUDY REFERENCE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
@@ -186,6 +198,8 @@
                 <input type="checkbox" disabled name="category-value" value=""> University Thesis
             </div>
         </div>
+        {% endif %}
+
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 REFERENCE CATEGORY<i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
