--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -209,8 +209,12 @@
             REFERENCE CATEGORY <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
         </div>
     </div>
-    <div class="row" style="display: none" data-toggle="tooltip" data-placement="top" title="Coming Soon">
+    <div class="row" style="display: none">
         <div class="col-lg-12 filter-content reference-category">
+        </div>
+        <div class="button-filter-wrapper">
+            <button class="apply-filter">Apply Filter</button>
+            <button class="clear-filter">Clear Filter</button>
         </div>
     </div>
 </script>
